(env
 (debug
  (flags
   (:standard -g -w A-48)))
 (noerr
  (flags
   (:standard -w -a)))
 (profile
  (ocamlopt_flags
   (:standard -p -w A-48))
  (flags
   (:standard -w A-48))))
; (rule
;  (alias coverage)
;  (target coverage.html)
;  (deps
;   (alias test/runtest))
;  (action
;   (bash "bisect-ppx-html html")))
