(documentation
 (package ppl)
 (mld_files index))

(rule
 (alias pdfdoc)
 (target htmldoc_docs.pdf)
 (mode (promote))
 (deps
  (alias %{workspace_root}/doc)
  include_docs)
 (action
  (progn
   (chdir
    %{workspace_root}
    (bash "htmldoc --size a4 --no-toc --header . --footer : --continuous $(cat doc/include_docs) -t pdf -f %{target} "))
   (bash "cp %{target} /home/anik/Files/work/project/diss/htmldocs.pdf"))))

(rule
 (alias texdoc)
 (target pandoc_docs.tex)
 (deps
  (alias %{workspace_root}/doc)
  include_docs)
 (mode (promote))
 (action
  (progn
   (chdir
    %{workspace_root}
    (bash "pandoc $(cat doc/include_docs) -o %{target}"))
   (bash "cp %{target} /home/anik/Files/work/project/diss/chapters/docs.tex"))))

(rule
 (alias alldocs)
 (deps
  (alias texdoc)
  (alias pdfdoc))
  
  (action (bash "cp -r /home/anik/Files/work/project/ppl/_build/default/_doc/_html/ /home/anik/Files/work/project/docs/"))
)

(alias
 (name doc)
 (deps
  (alias %{workspace_root}/doc)))
