(copy_files# unit_tests/*)

(executables
 (names eval_hypothesis_tests eval_kl_tests eval_complexity misc)
 (modules eval_hypothesis_tests models eval_kl_tests eval_complexity misc)
 (libraries core owl ppl alcotest))

(tests
 (names
  test
  ;   test_evaluation test_dist test_helpers test_inference test_plot test_primitive test_empirical
  )
 (modules test test_evaluation test_dist test_helpers test_inference
   test_plot test_primitive test_empirical unit_test_models)
 (libraries core owl ppl alcotest qcheck qcheck-alcotest)
 ;  (action
 ;   (run %{test} -e))
 )
